# GST-RAG-

./: .gitignore  README.md  render.yaml  setup_docker.sh
data/: docx  excel  pdf
frontend/: package-lock.json  package.json  tailwind.config.js  (+2 more)
rag-backend/: .dockerignore  .gitignore  Dockerfile  check_env.py  debug_docs.py  main.py  pyproject.toml  requirements.txt  setup_ec2.sh  test_api.py  verify_api.py
rag-backend/app/: config.py  dependencies.py
rag-backend/app/api/: advisory.py  app.py  documents.py
rag-backend/app/chunking/: chunker.py
rag-backend/app/embeddings/: embedder.py
rag-backend/app/excel_logic/: section_rule_lookup.py
rag-backend/app/generation/: advisory.py  answer.py  confidence.py  context_builder.py  final_answer.py  pdf_report.py  prompt.py  safety.py  source_formatter.py  synthesizer.py
rag-backend/app/generation/prompts/: advisory_prompt.py
rag-backend/app/ingestion/: clean_text.py  docx_reader.py  excel_reader.py  pdf_scanned.py  pdf_text.py
rag-backend/app/retrieval/: retriever.py  source_priority.py
rag-backend/app/routing/: intent_classifier.py  router.py
rag-backend/app/utils/: s3_sync.py
rag-backend/app/vectordb/: store.py
rag-backend/data/chunks/: chunks.jsonl
rag-backend/data/extracted/: documents.jsonl
rag-backend/data/raw/docx/: FORM GST APL - 06.docx
rag-backend/data/raw/excel/: Sections List.xlsx
rag-backend/scripts/: run_chunking.py  run_embeddings.py  run_ingestion.py  test_answer.py  test_rag.py  test_retrieval.py  verify_enterprise.py
rag-backend/vectordb/: index.faiss  index.meta.json
(+36 files in other folders)
